[package]
name = "on-this-day-sidecar"
version = "0.1.0"
edition = "2024"

[lib]
name = "on_this_day_sidecar"
path = "src/lib.rs"

[[bin]]
name = "on-this-day-sidecar"
path = "src/main.rs"

[dependencies]
vzglyd_sidecar = { package = "VRX-64-sidecar", git = "https://github.com/vzglyd/VRX-64-sidecar" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
